# ecp-3d

./: .gitignore
docs/tex/: main.tex
docs/tex/init/: front.tex  imports.tex
ecp-circuit/: #auto_saved_files#  ecp-circuit.kicad_pro  ecp-circuit.kicad_sch
electronics/ecp-circuit/: ecp-circuit.kicad_prl  ecp-circuit.kicad_sch  ecp.bak  ecp.kicad_sym  sym-lib-table
electronics/ecp-pcb/: ecp-32d-pcb.kicad_prl  ecp-32d-pcb.kicad_pro  ecp-32d-pcb.kicad_sch  sym-lib-table
electronics/ecp-pcb/lib/ecp/: ecp.bak  ecp.kicad_sym
electronics/ecp-pcb/lib/teensy/: teensy.kicad_sym
software/cpp/ring/: Makefile  main.cpp  ring_buffer.cpp  ring_buffer.h
software/matlab/: ecpclosedloop.slx  ecpclosedloop.slxc  main.asv  main.m  main2.m  mod_coder.slx  mod_coder.slxc  mod_linux.slx  mod_packet.slx  mod_stream.slx  mod_stream.slxc  mod_win.rxw64  mod_win.slx  mod_win.slxc  mod_win_V2.slx  mod_win_validation.slx  mod_win_validation.slx.autosave  modl.slx  param.m  plot_simple.m  plotting.m  plotting_validation.m  test_tmp.slx  threeDiskOscillator.m  threeDiskOscillatorRig.slx  timing_calc.m
software/matlab/mod_coder_ert_rtw/: CMakeLists.txt  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  ert_main.c  mod_coder.bat  mod_coder.c  mod_coder.h  mod_coder_private.h  mod_coder_types.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
software/matlab/mod_coder_ert_rtw/html/data/: data.js  pages.js
software/matlab/mod_coder_ert_rtw/html/pages/: mod_coder_coderassumptions.html  mod_coder_interface.html  mod_coder_reducedblocks.html  mod_coder_replacements.html  mod_coder_subsystems.html  mod_coder_survey.html  mod_coder_trace.html
software/matlab/mod_coder_grt_rtw/: CMakeLists.txt  buildInfo.mat  builtin_typeid_types.h  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  mod_coder.c  mod_coder.h  mod_coder_data.c  mod_coder_private.h  mod_coder_types.h  multiword_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
software/matlab/mod_coder_grt_rtw/html/data/: data.js  model.js  pages.js
software/matlab/mod_coder_grt_rtw/html/pages/: mod_coder_interface.html  mod_coder_survey.html
software/matlab/mod_coder_grt_rtw/tmwinternal/: simulink_cache.xml
software/matlab/mod_win_sldrt_win64/: buildInfo.mat  codedescriptor.dmr  compileInfo.mat  mod_win.bat  mod_win.c  mod_win.h  mod_win.mk  mod_win_data.c  mod_win_dt.h  mod_win_private.h  mod_win_targ_data_map.m  mod_win_tgtconn.c  mod_win_types.h  multiword_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_defines.h  rt_nonfinite.c  rt_nonfinite.h  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat  zero_crossing_types.h
software/matlab/mod_win_sldrt_win64/tmwinternal/: mod_win_TgtConnMgr.mat  simulink_cache.xml
software/matlab/slprj/_jitprj/: jitEngineAccessInfo.mat  sFykADk7hDGkQxg7VlJPWQE.l  sFykADk7hDGkQxg7VlJPWQE.mat  sGzFpbj5P9N5DUupj4Z02G.l  sGzFpbj5P9N5DUupj4Z02G.mat  sI04hubXD9bYepolihOwWHE.mat  sJIcEZh4umyNNuwKIIyHFCF.l  sJIcEZh4umyNNuwKIIyHFCF.mat  sKp6H6rzq3G9qPPENkvNYQH.l  sKp6H6rzq3G9qPPENkvNYQH.mat  sQLRsYHw8Xmu7GloC0DDvvF.l  sQLRsYHw8Xmu7GloC0DDvvF.mat  sSkTuWLVl8OLbh10kTYTDgC.l  sSkTuWLVl8OLbh10kTYTDgC.mat  sZw3ZsbnYyKY442EfqXu73F.l  sZw3ZsbnYyKY442EfqXu73F.mat  sk9usWNsyEKVHYOP8YfAPvB.l  sk9usWNsyEKVHYOP8YfAPvB.mat  so2DGWEMTJff432cr6wLTdB.l  so2DGWEMTJff432cr6wLTdB.mat
software/matlab/slprj/_sfprj/EMLReport/: 51E9hZTOUQ87bVdtcZHbCG.mat  e88aRXZQtOjHlxFhN7hlOD.mat  emlReportAccessInfo.mat  sFykADk7hDGkQxg7VlJPWQE.mat  sGzFpbj5P9N5DUupj4Z02G.mat  sI04hubXD9bYepolihOwWHE.mat  sJIcEZh4umyNNuwKIIyHFCF.mat  sKp6H6rzq3G9qPPENkvNYQH.mat  sQLRsYHw8Xmu7GloC0DDvvF.mat  sSkTuWLVl8OLbh10kTYTDgC.mat  sZw3ZsbnYyKY442EfqXu73F.mat  sk9usWNsyEKVHYOP8YfAPvB.mat  so2DGWEMTJff432cr6wLTdB.mat  wFXQmCyaYNPeoHsPf2j4ZD.mat
software/matlab/slprj/_sfprj/mod_stream/: amsi_serial.mat
software/matlab/slprj/_sfprj/mod_win_V2/: amsi_serial.mat
software/matlab/slprj/_sfprj/precompile/: F3JNVbor3pqgUQHQ2vhJYG.mat  P3qobFqJBi0DaDHQ90UboD.mat  VkuTxKEWtdrEPDkAQY7sQE.mat  ZA1RlQh6bzrOFHuh8UdlR.mat  autoInferAccessInfo.mat  bWtbF13KfRnj3mccI9IS3D.mat  dn9q3civdkdIjgIYixQHgG.mat  fbWal240CFKj5AIjzYKjiF.mat  kzP18b9CIs9zAuAXh1uQfB.mat  l6Lp1u6u0fzgkVG5L0rMIC.mat  miogY5p7hiPsr9dnBbKehB.mat  odqi8diNBx39BbxzAmY5YB.mat  rCAaklK7pwQcEdBWCsxcx.mat  tASHHZWDFFB8bgz5a4eiMH.mat  vSwyKxkZ1asnHYY8HHSgoH.mat  voFzt2DcKNKgtwf4QFSksC.mat  wlF5XDv9IiDEfe5bAnBmHH.mat  wuFRjKCL7Cim1ctBfdP95G.mat  xN2D3oZMn6Y35dyVEKzCSG.mat
software/matlab/slprj/accel/mod_stream/: amsi_serial.mat  mod_stream_SolverChangeInfo.mat  mod_stream_instrumentation_settings.mat  mod_stream_top_vm.bc
software/matlab/slprj/accel/mod_win/: amsi_serial.mat  mod_win_SolverChangeInfo.mat  mod_win_instrumentation_settings.mat  mod_win_top_vm.bc
software/matlab/slprj/ert/_sharedutils/: shared_file.dmr
software/matlab/slprj/grt/_sharedutils/: shared_file.dmr
software/matlab/slprj/raccel/mod_stream/: codedescriptor.dmr  ext_input_settings.mat  mod_stream.rtw  mod_stream_SolverChangeInfo.mat  mod_stream_default_variable_values.mat  mod_stream_rtp_registry.xml  mod_stream_variable_registry.xml  template_dataset.mat
software/matlab/slprj/sim/_sharedutils/: shared_file.dmr
software/matlab/slprj/sldrt_win64/_sharedutils/: shared_file.dmr
software/spice/: DAC-amplifier.asc
software/teensy/teensy-ecp-v2/: platformio.ini
software/teensy/teensy-ecp-v2/lib/bridge/: bridge.cpp  bridge.h
software/teensy/teensy-ecp-v2/lib/dac/: dac.cpp  dac.h
software/teensy/teensy-ecp-v2/lib/filter/: filter.cpp  filter.h
software/teensy/teensy-ecp-v2/src/: constants.h  main.cpp  unused.txt
software/teensy/teensy-ecp/lib/bridge/: bridge.cpp  bridge.h
software/teensy/teensy-ecp/src/: constants.h  main.cpp  serial_commands.h
software/teensy/teensy-ecp/test/: ad5761r.c  ad5761r.h
software/teensy/teensy-validation/lib/bridge/: bridge.cpp  bridge.h
software/teensy/teensy-validation/lib/dac/: dac.cpp  dac.h
software/teensy/teensy-validation/src/: constants.h  main.cpp  old.txt  old_shit.txt
(+40 files in other folders)
